syntax = "proto3";
package sm.v1;
option go_package = "github.com/roofn/secure-messenger/server/internal/gen/sm/v1;smv1";
import "common.proto";


service Auth {

rpc WhoAmI(Empty) returns (WhoAmIResponse);
}


message WhoAmIResponse {
  string user_id = 1;
  string display_name = 2;
  repeated string roles = 3; 
  string device_id = 4;
  bytes device_cert_der = 5;
}
